k8s/06-api-service.yaml
---
# API Service Service
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: securerepo
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api
---
# API Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: securerepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      # nodeSelector:
      #   node: node-app
      containers:
      - name: api
        image: xravil/securerepo-api-service:v0.1.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
