k8s/07-frontend-service.yaml
---
# Frontend Service Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: securerepo
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
---
# Frontend Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: securerepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      # nodeSelector:
      #   node: node-app
      containers:
      - name: frontend
        image: xravil/securerepo-frontend-service:v0.1.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
