k8s/10-indexer-service.yaml
---
# Indexer Service Service
apiVersion: v1
kind: Service
metadata:
  name: indexer
  namespace: securerepo
spec:
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
  selector:
    app: indexer
---
# Indexer Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
  namespace: securerepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      containers:
      - name: indexer
        image: xravil/securerepo-indexer-service:v0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
